# hermes-python

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Hermes.html  Makefile  README.md  README_EN.md  run-api.sh  start-agent.sh  start-api.sh  start-web.sh  test_group_chat.py
backend/: .env.example  alembic.ini  dump.rdb  log_config.yaml  pyproject.toml  run_server.py
backend/agent_runner/: __init__.py  acp_client.py  discovery.py  mock_agent.py  runner.py  runner_roundtable.py  sandbox.py  session_pool.py  storage.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_conversations.py  0003_teams.py  0004_roundtable.py  0005_admin.py  0006_identity.py  0007_team_content.py  0009_workspace_versions.py  0010_profiles.py  0011_profile_path.py  0012_channel.py  0013_invite_token.py  0014_message_owner.py  0017_session_mode.py  0019_workspace_file_message.py  0020_conversation_channel_mode.py  0021_user_preferences.py  0022_agent_memory.py  0025_memory_consolidated_at.py  0026_conv_owner_updated_index.py
backend/app/: __init__.py  config.py  deps.py  main.py  seed.py  wait_for_services.py
backend/scripts/: run-agent.sh  start.sh
backend/tests/: conftest.py  test_admin.py  test_api_contracts.py  test_auth.py  test_auth_flow.py  test_clarify_v2.py  test_conversation_stream.py  test_conversations.py  test_identity_p5.py  test_memory_consolidate.py  test_object_storage.py  test_real_cli_integration.py  test_request_id_middleware.py  test_roundtable.py  test_security_hardening.py  test_session_pool_profile.py  test_teams.py  test_teams_governance.py
(+153 files in other folders)
