[project]
name = "hermes-backend"
version = "0.1.0"
description = "Hermes 信使 — production backend (FastAPI + PostgreSQL + Redis + ACP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]>=2.7",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "boto3>=1.34",
    "ldap3>=2.9",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "moto>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
